--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 android {
-    namespace 'com.example.cedokbooster'
+    namespace 'com.example.vpndnstest'
     compileSdk 34
 
     compileOptions {
@@ -17,7 +17,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.example.cedokbooster"
+        applicationId "com.example.vpndnstest"
         minSdk 24
         targetSdk 34
         versionCode 1
